sas-core/main/default/objects/GDPR_Retention_Link__mdt/GDPR_Retention_Link__mdt.object-meta.xml
<CustomObject>
    <description>This is junction Object between GDPR Retention Policy and GDPR Related Object.</description>
    <label>GDPR Retention Link</label>
    <pluralLabel>GDPR Retention Links</pluralLabel>
</CustomObject>