sas-core/main/default/objects/GDPR_Retention_Link__mdt/fields/GDPR_Related_Channel_Object__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Related_Channel_Object__c</fullName>
    <label>GDPR Related Channel Object</label>
    <referenceTo>GDPR_Related_Channel_Object__mdt</referenceTo>
    <relationshipLabel>GDPR Retention Links</relationshipLabel>
    <relationshipName>GDPR_Retention_Links</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>