sas-core/main/default/objects/GDPR_Retention_Link__mdt/fields/GDPR_Related_Channel_Object_Link__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Related_Channel_Object_Link__c</fullName>
    <label>GDPR Related Channel Object Link</label>
    <referenceTo>GDPR_Related_Channel_Object__mdt</referenceTo>
    <relationshipLabel>GDPR Retention Links (GDPR Related Channel Object Link)</relationshipLabel>
    <relationshipName>RetentionLinked</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>