sas-core/main/default/objects/GDPR_Retention_Link__mdt/fields/GDPR_Retention_Policy__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Retention_Policy__c</fullName>
    <label>GDPR Retention Policy</label>
    <referenceTo>GDPR_Retention_Policy__mdt</referenceTo>
    <relationshipLabel>GDPR Retention Links</relationshipLabel>
    <relationshipName>GDPR_Retention_Links</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>