sas-core/main/default/objects/GDPR_Retention_Link__mdt/fields/Related_LookupField__c.field-meta.xml
<CustomField>
    <fullName>Related_LookupField__c</fullName>
    <label>Related LookupField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>